<resources>
    <string name="app_name">Arete Pro</string>
    <string name="normal">Normal.ttf</string>
    <string name="medium">Medium.ttf</string>
    <string name="bold">Bold.ttf</string>
    <string name="client">Client</string>
    <string name="where_to_go">Where Do You Want To Go</string>
    <string name="service_provider">Service Provider</string>
    <string name="default_channel_id">122</string>
    <string name="skip">skip</string>
    <string name="start">GOT IT</string>
    <string name="forgot_password_message">We just need your registered Email ID to \n send you password reset instructions.</string>
    <string name="registered_email_or_phone">Registered Email Id or Phone Number</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="reset_password_title">Reset Your Password.</string>
    <string name="reset_password_message">Enter your new password below.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_verify">Email Verification</string>
    <string name="phone_verify">Mobile Verification</string>
    <string name="email_message">We have sent you access code via EMAIL for email verification</string>
    <string name="phone_message">We have sent you access code via MOBILE for mobile verification</string>
    <string name="enter_code">Enter Code Here</string>
    <string name="resend_code">Resend Code</string>
    <string name="done">Done</string>
    <string name="facebook_app_id">739636376434301</string>
    <string name="fb_login_protocol_scheme">fb739636376434301</string>
    <string name="logout">Log Out</string>
    <string name="intro_one">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
       </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birth Date</string>
    <string name="gender">Gender *</string>
    <string name="price">Price *</string>
    <string name="phone_number">Phone Number</string>
    <string name="country_name">Country Name</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="miles">Search jobs within(Radius) *</string>
    <string name="profile_info">Save Button will enable only if mandatory fields are filled.</string>
    <string name="speciality">Speciality</string>
    <string name="address_validation">Please choose address!</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="log_in_first_cap_case">Log In</string>
    <string name="sign_up_first_cap_case">Sign Up</string>
    <string name="sign_up_with_facebook">SIGN UP WITH FACEBOOK</string>
    <string name="sign_in_with_facebook">SIGN IN WITH FACEBOOK</string>
    <string name="sign_in_with_google">SIGN IN WITH Google</string>
    <string name="email_address">Email Address</string>
    <string name="email_or_phone">Email or Phone Number</string>
    <string name="or">OR</string>
    <string name="save">Save</string>
    <string name="popup_title">Please Enter Email Id</string>
    <string name="popup_submit">Submit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_Jobs">Jobs</string>
    <string name="title_Notification">Notification</string>
    <string name="notify_new_job">New Job Alert</string>
    <string name="notify_new_bid">New Bid Alert</string>
    <string name="notify_start_job">Start Job Alert</string>
    <string name="notify_completed_job">Job Completed</string>
    <string name="notify_job_offer">Job Offered</string>
    <string name="notify_job_accepted">Job Accepted</string>
    <string name="notify_job_assigned">Job Assigned</string>
    <string name="notify_job_paid">Job Paid</string>
    <string name="notify_job_cancelled">Job Cancelled</string>
    <string name="notify_job_updated">Job Updated</string>
    <string name="notify_job_rejected">Job Rejected</string>
    <string name="notify_job_interested">Interest Sent</string>
    <string name="title_Setting">Setting</string>
    <string name="title_Message">Message</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="request">Request</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="play_store_link">Hey check out my app at :  https://play.google.com/store/apps/details?id=com.maidpicker</string>
    <string name="no_connection">No Internet Connection, Please connect to an active Internet Connection.</string>
    <string name="cleaning">Cleaning</string>
    <string name="cleaning_house">House</string>
    <string name="cleaning_carpet">Carpet</string>
    <string name="cleaning_window">Window</string>
    <string name="house_cleaning">House Cleaning</string>
    <string name="carpet_cleaning">Carpet Cleaning</string>
    <string name="window_cleaning">Window Cleaning</string>
    <string name="address">Address</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="other">Other</string>
    <string name="kitchen">\u0020Kitchen</string>
    <string name="bedroom">\u0020Bedroom</string>
    <string name="bathroom">Bathroom</string>
    <string name="space">\u0020</string>
    <string name="full_clean">Full House</string>
    <string name="room_detail">Task Size</string>
    <string name="room_bedrooms">Bedrooms</string>
    <string name="room_kitchen">Kitchens</string>
    <string name="room_bathrooms">Bathrooms</string>
    <string name="room_full">Full Clean</string>
    <string name="room_partial">Partial Clean</string>
    <string name="room_other">Others    </string>
    <string name="room_clean">Clean Size</string>
    <string name="room_done">Done</string>
    <string name="room_sqft">SQFT</string>
    <string name="when_title">When?</string>
    <string name="when_now">Now</string>
    <string name="when_today">Today</string>
    <string name="when_future">Future</string>
    <string name="how_often_title">How Often?</string>
    <string name="how_often_weekly">Weekly</string>
    <string name="how_often_by_weekly">Bi Weekly</string>
    <string name="how_often_monthly">Monthly</string>
    <string name="how_often_just_once">Just Once</string>
    <string name="how_often_desc">This service can be reschedule base on your needs.\nRecurring
        services get better price than one time services get a better deal by requesting recurring
        services.</string>
    <string name="extra_cleaning_title">Extra Cleaning</string>
    <string name="request_bid">Request Bid</string>
    <string name="fixed_price">Set Price</string>
    <string name="how_much">How much do you want to pay?</string>
    <string name="spc_message">Skilled Labor is not cheap and cheap labor is not skilled.\nBeware of this when choosing your price.</string>
    <string name="choose_provider">Choose Provider</string>
    <string name="spc_notes_title">Special Notes for Provider</string>
    <string name="type_here">Type here...</string>
    <string name="extra_detail">(A more detailed clean, cleaning above, behind and below furniture and all places difficult to reach)</string>
    <string name="extra_detail_2">(Everything in the fridge will be disposed)</string>
    <string name="task_size_error">Please enter Square Feet Area</string>
    <string name="task_size_value_error">Please enter Valid Square Feet Area</string>
    <string name="price_txt">Price</string>
    <string name="create_job">Create Job</string>
    <string name="booked_price">Booked Price</string>
    <string name="booked_hour">Hour Booked</string>
    <string name="comma">,</string>
    <string name="task_size_validation">Please choose Task Size for Carpet Cleaning!</string>
    <string name="task_size_window_validation">Please choose Task Size for Window Cleaning!</string>
    <string name="est_time_hour">Estimated Hours</string>
    <string name="est_hour">Estimated Hours</string>
    <string name="hire">Hire</string>
    <string name="view">View</string>
    <string name="provider_interested">Provider interested</string>
    <string name="completed_by">Completed By :  </string>
    <string name="paid_price">Price Paid</string>
    <string name="past_jobs">Past Jobs</string>
    <string name="bid_rejected">Bid rejected successfully</string>
    <string name="task_size">Task Size</string>
    <string name="extra">Extra</string>
    <string name="provider">How do you want to get a provider?</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_job">Confirm Job</string>
    <string name="edit">Edit</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="job_created">Your Job is created successfully</string>
    <string name="add_favorite">Do you want to add this Service Provider as Favorite</string>
    <string name="view_details">View Details</string>
    <string name="view_bids">View Bids</string>
    <string name="view_provider">View Provider</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="bid">Bid</string>
    <string name="im_interested">I am Interested</string>
    <string name="message">Message</string>
    <string name="cancel_bid">Cancel Bid</string>
    <string name="modify_bid">Modify Bid</string>
    <string name="pay_price">Amount to be paid : </string>
    <string name="payment">Payment</string>
    <string name="Prewalk_notes">Pre-walk notes</string>
    <string name="Prewalk_image">Pre-walk Images</string>
    <string name="Postwalk_notes">Post-walk notes</string>
    <string name="Postwalk_image">Post-walk Images</string>
    <string name="complete_job">Complete Job</string>
    <string name="validation_pre_walk_note">Please add Pre-walk notes</string>
    <string name="validation_post_walk_note">Please add Post-walk notes</string>
    <string name="review">Review</string>
    <string name="price_is_high">Price is higher than the Estimated Price</string>
    <string name="bid_price_text">Bid Price</string>
    <string name="bid_price_with_colon">Bid Price:</string>
    <string name="regular_window_first_floor">Select Number of Regular Windows 1st Floor:</string>
    <string name="regular_window_second_floor">Select Number of Regular Windows 2nd Floor:</string>
    <string name="french_grid_windows">Select Number of French/Grid Type Windows:</string>
    <string name="patio_doors">Select Number of Sliding Patio Doors:</string>
    <string name="garden_windows">Select Number of Garden Windows:</string>
    <string name="wardrobe_mirror">Select Number of wardrobe Mirrors:</string>
    <string name="about_me">About Me</string>
</resources>