<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/popup_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_16sdp" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etDialogEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/_5sdp"
            android:textColor="@color/primary_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDialogSubmit"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/popup_submit"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14sdp" />
</LinearLayout>