<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        app:cardCornerRadius="@dimen/_25sdp"
        android:background="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:foregroundTint="@color/colorWhite"
        android:layout_gravity="center_horizontal"
        app:cardElevation="@dimen/_2sdp"
        >
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/userImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/nav_header_desc"

        app:srcCompat="@drawable/ic_person_black_24dp" />
    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>
