<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.cardview.widget.CardView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardElevation="@dimen/_4sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textColor="@color/primary_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textColor="@color/primary_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"

                    android:hint="@string/birthday"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textColor="@color/primary_text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/gender"
                    android:inputType="text"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textColor="@color/primary_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="Hourly Price *"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textColor="@color/primary_text"
                    android:visibility="gone"


                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/carExtras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:cardElevation="@dimen/_4sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textColor="@color/primary_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textColor="@color/primary_text" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardlocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:visibility="gone"
        app:cardElevation="@dimen/_4sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:visibility="visible">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="Address"
                    android:inputType="textPostalAddress"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textColor="@color/primary_text"
                    android:visibility="visible" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_zipcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="true"
                    android:hint="ZipCode *"
                    android:inputType="textPhonetic"
                    android:maxLength="15"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textColor="@color/primary_text" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:cardElevation="@dimen/_4sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/about_me"
                    android:imeOptions="actionDone"
                    android:paddingLeft="@dimen/_5sdp"
                    android:singleLine="true"
                    android:textColor="@color/primary_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Show the jobs in miles-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_miles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/miles"
                    android:inputType="text"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textColor="@color/primary_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Provider Speciality-->

            <LinearLayout
                android:id="@+id/providerSpeciality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtSpeciality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="@string/speciality"
                    android:textColor="@color/primary_text" />

                <CheckBox
                    android:id="@+id/chkHouseCleaning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/house_cleaning" />

                <CheckBox
                    android:id="@+id/chkCarpetCleaning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/carpet_cleaning" />

                <CheckBox
                    android:id="@+id/chkWindowCleaning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/window_cleaning" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <!-- android:backgroundTint="@color/secondary_text"-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/secondary_text"
        android:enabled="false"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        android:visibility="visible" />


</LinearLayout>