<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    tools:context=".profile.SplashActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        app:srcCompat="@mipmap/ic_clientlogo"
        android:layout_marginTop="@dimen/_70sdp"
        android:layout_centerHorizontal="true"/>
    <androidx.cardview.widget.CardView
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_width="match_parent"
       android:layout_below="@id/logo"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical"
   >
    <androidx.appcompat.widget.AppCompatTextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where_to_go"
      android:textSize="@dimen/_16sdp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/_15sdp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/client"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_30sdp"
        android:text="@string/client"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textSize="@dimen/_14sdp"
        android:onClick="onClientClicked"
        android:textAllCaps="false"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:layout_margin="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/service_provider"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_30sdp"
        android:text="@string/service_provider"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:onClick="onProviderClicked"
        android:textAllCaps="false"
        android:textSize="@dimen/_14sdp"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:layout_margin="@dimen/_15sdp"/>
</LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
